--- a/.github/workflows/NewVersionRelease.yml
+++ b/.github/workflows/NewVersionRelease.yml
@@ -3,9 +3,9 @@ name: 发布版本
 on:
   push:
     tags: 
-    - 'release/*'
-    - 'release/v*'
-    - 'v*'
+      - 'release/*'
+      - 'release/v*'
+      - 'v*'
 
 jobs:
   New_Version_Build_And_Release:
@@ -15,7 +15,7 @@ jobs:
         include:
           - qt_arch: win64_msvc2019_64
             qt_ver: 6.5.*
-            app_name: morose
+            app_name: UnionOffline
     steps:
     # 拉取仓库
     - name: Git Checkout
@@ -28,12 +28,18 @@ jobs:
     # 创建changelog
     - name: Create changelog text
       id: changelog
-      uses: mengyou1024/action-changelog@v0.1.0
+      uses: mengyou1024/action-changelog@v0.1.2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         exclude_types: other,doc,chore
-    # 安装ISCC
-    - uses: Minionguyjpro/Inno-Setup-Action@v1.0.0
+    # 安装依赖
+    - name: Install dependencies
+      run: |
+        choco install ninja InnoSetup -y > nul
+    # 配置MSVC环境
+    - uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
     # 安装Qt
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -41,20 +47,18 @@ jobs:
         version: ${{ matrix.qt_ver }}
         arch: ${{ matrix.qt_arch }}
         cache: ${{steps.cache-qt.outputs.cache-hit}}
-        modules: 'qt5compat qtmultimedia qtshadertools qtimageformats'
+        modules: 'qt5compat qtmultimedia qtshadertools qtimageformats qtcharts'
     # 配置、编译程序
     - name: CMake Config
       run: |
-        cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt6_DIR }}" -G "Unix Makefiles"  -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt6_DIR }}" -G Ninja  -DCMAKE_BUILD_TYPE=Release
     - name: CMake Build
-      run: cmake --build build --target generate_exe_installer --config Release
+      run: cmake --build build --target generate_exe_installer Archive --config Release
     # 打包输出文件
     - name: Package 
       run: |
         pushd output
-        mv dist ${{ matrix.app_name }}
-        7z a -tZip ${{ matrix.app_name }}.zip ./${{ matrix.app_name }}/*
-        cp ${{ matrix.app_name }}.zip ../${{ matrix.app_name }}.zip
+        7z a -tZip ${{ matrix.app_name }}-${{steps.changelog.outputs.version}}.zip ./${{ matrix.app_name }}-${{steps.changelog.outputs.version}}/*
         popd
     # 创建Release
     - name: Create Release
@@ -75,8 +79,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./output/install/${{ matrix.app_name }}Installer.exe
-        asset_name: ${{ matrix.app_name }}Installer.exe
+        asset_path: ./output/${{ matrix.app_name }}Installer-${{steps.changelog.outputs.version}}.exe
+        asset_name: ${{ matrix.app_name }}Installer-${{steps.changelog.outputs.version}}.exe
         asset_content_type: application/octet-stream
     # 上传压缩包
     - name: Upload Release Zip
@@ -85,6 +89,29 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ matrix.app_name }}.zip
-        asset_name: ${{ matrix.app_name }}.zip
+        asset_path: ./output/${{ matrix.app_name }}-${{steps.changelog.outputs.version}}.zip
+        asset_name: ${{ matrix.app_name }}-${{steps.changelog.outputs.version}}.zip
         asset_content_type: application/zip
+    # 上传归档源码
+    - name: Upload Archive Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./output/${{ matrix.app_name }}-${{steps.changelog.outputs.version}}-archive.zip
+        asset_name: ${{ matrix.app_name }}-${{steps.changelog.outputs.version}}-archive.zip
+        asset_content_type: application/zip
+    # 提交changelog
+    - name: Create Changes File
+      run: |
+        git checkout master
+        if((Test-Path "CHANGELOG.md") -ne "True") { echo "" > CHANGELOG.md }
+        $CHANGELOG_FILE = Get-Content -Encoding utf8 -Raw -Path CHANGELOG.md
+        Clear-Content -Path CHANGELOG.md
+        echo "${{steps.changelog.outputs.changelog}}" > CHANGELOG.md
+        Add-Content -Path CHANGELOG.md -Value "$CHANGELOG_FILE" -NoNewline
+        git add CHANGELOG.md
+        git commit -m "Update changelog for version ${{steps.changelog.outputs.version}}"
+        git pull
+        git push origin master
