--- a/script/pack-installer.iss.in
+++ b/script/pack-installer.iss.in
@@ -8,7 +8,7 @@
 #define MyAppExeName "@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"
 #define MoroseInstallDir "@MOROSE_INSTALL_DIR@"
 #define MoroseIcon  "@MOROSE_ICON@"
-#define MoroseInstallerName "@PROJECT_NAME@Installer"
+#define MoroseInstallerName "@PROJECT_NAME@Installer-@APP_VERSION@"
 
 [Setup]
 ; NOTE: The value of AppId uniquely identifies this application. Do not use the same AppId value in installers for other applications.
@@ -47,6 +47,7 @@ Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{
 [Files]
 Source: "@MOROSE_DIST_DIR@/@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"; DestDir: "{app}"; Flags: ignoreversion
 Source: "@MOROSE_DIST_DIR@/*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
+Source: "@MOROSE_DIST_DIR@/VC_redist.x64.exe"; DestDir: "{app}"; Flags: deleteafterinstall
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [UninstallDelete]
@@ -61,4 +62,4 @@ Name: "{autodesktop}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"; Tasks: de
 
 [Run]
 Filename: "{app}\{#MyAppExeName}"; Description: "{cm:LaunchProgram,{#StringChange(MyAppName, '&', '&&')}}"; Flags: nowait postinstall skipifsilent
-
+Filename: "{app}\vc_redist.x64.exe"; Parameters: /q; StatusMsg: "Installing Microsoft Visual C++ Runtime ..."
