--- a/script/pack-installer.iss.in
+++ b/script/pack-installer.iss.in
@@ -3,7 +3,7 @@
 
 #define MyAppName "@PROJECT_NAME@"
 #define MyAppVersion "@APP_VERSION@"
-#define MyAppPublisher "@GIT_USER_NAME@
+#define MyAppPublisher "@GIT_USER_NAME@"
 #define MyAppURL "@GIT_REPOSITORY_URL@"
 #define MyAppExeName "@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"
 #define MoroseInstallDir "@MOROSE_INSTALL_DIR@"
@@ -11,9 +11,9 @@
 #define MoroseInstallerName "@PROJECT_NAME@Installer-@APP_VERSION@"
 
 [Setup]
-; NOTE: The value of AppId uniquely identifies this application. Do not use the same AppId value in installers for other applications.
-; (To generate a new GUID, click Tools | Generate GUID inside the IDE.)
-AppId={{B1152C3A-4017-4F38-A711-6C481F82C753}
+; 注意:AppId的值唯一标识该应用程序。不要在其他应用程序的安装程序中使用相同的AppId值。
+; (要生成新的GUID，请在IDE中单击Tools | generate GUID。)
+AppId={{65C66E39-C539-4D2D-9DEF-664965A9C599}
 AppName={#MyAppName}
 AppVersion={#MyAppVersion}
 ;AppVerName={#MyAppName} {#MyAppVersion}
@@ -24,9 +24,10 @@ AppUpdatesURL={#MyAppURL}
 DefaultDirName={autopf}\{#MyAppName}
 DefaultGroupName={#MyAppName}
 AllowNoIcons=yes
-; Uncomment the following line to run in non administrative install mode (install for current user only.)
-;PrivilegesRequired=lowest
-PrivilegesRequiredOverridesAllowed=dialog
+; 权限请求 admin 或 lowest
+PrivilegesRequired=admin
+; 安装模式对话框 所有用户或者当前用户
+;PrivilegesRequiredOverridesAllowed=dialog
 OutputDir={#MoroseInstallDir}
 OutputBaseFilename={#MoroseInstallerName}
 SetupIconFile={#MoroseIcon}
@@ -39,21 +40,24 @@ ArchitecturesInstallIn64BitMode=x64
 
 [Languages]
 Name: "ChineseSimplified"; MessagesFile: "@CMAKE_SOURCE_DIR@/Language/ChineseSimplified.isl"
-Name: "English"; MessagesFile: "compiler:Default.isl"
+;Name: "English"; MessagesFile: "compiler:Default.isl"
 
 [Tasks]
-Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: unchecked
+Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: checkablealone
 
 [Files]
-Source: "@MOROSE_DIST_DIR@/@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"; DestDir: "{app}"; Flags: ignoreversion
-Source: "@MOROSE_DIST_DIR@/*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
-Source: "@MOROSE_DIST_DIR@/VC_redist.x64.exe"; DestDir: "{app}"; Flags: deleteafterinstall
+Source: "@MOROSE_DIST_DIR@/@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"; DestDir: "{app}"; Flags: comparetimestamp
+Source: "@MOROSE_DIST_DIR@/*"; DestDir: "{app}"; Flags: comparetimestamp recursesubdirs createallsubdirs
+Source: "@MOROSE_DIST_DIR@/vc_redist.x64.exe"; DestDir: "{app}"; Flags: comparetimestamp
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [UninstallDelete]
 Type: filesandordirs; Name: "{app}/log"
 Type: files; Name: "{app}/setting.ini"
 @MOROSE_UNINSTALL_DELETE_STRING@
+
+[UninstallRun]
+Filename: "{app}\vc_redist.x64.exe"; Parameters: /uninstall /passive 
 
 [Icons]
 Name: "{group}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"
@@ -63,4 +67,4 @@ Name: "{autodesktop}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"; Tasks: de
 
 [Run]
 Filename: "{app}\{#MyAppExeName}"; Description: "{cm:LaunchProgram,{#StringChange(MyAppName, '&', '&&')}}"; Flags: nowait postinstall skipifsilent
-Filename: "{app}\vc_redist.x64.exe"; Parameters: /q; StatusMsg: "Installing Microsoft Visual C++ Runtime ..."
+Filename: "{app}\vc_redist.x64.exe"; Parameters: /passive; StatusMsg: "Installing Microsoft Visual C++ Runtime ..."
