feat: 安装包安装时不再检查文件的时间戳

--- a/script/pack-installer-msvc.iss.in
+++ b/script/pack-installer-msvc.iss.in
@@ -46,9 +46,9 @@ Name: "ChineseSimplified"; MessagesFile: "@CMAKE_SOURCE_DIR@/Language/ChineseSim
 Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{cm:AdditionalIcons}"; Flags: checkablealone
 
 [Files]
-Source: "@MOROSE_DIST_DIR@/@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"; DestDir: "{app}"; Flags: comparetimestamp
-Source: "@MOROSE_DIST_DIR@/*"; DestDir: "{app}"; Flags: comparetimestamp recursesubdirs createallsubdirs
-Source: "@MOROSE_DIST_DIR@/vc_redist.x64.exe"; DestDir: "{app}"; Flags: comparetimestamp
+Source: "@MOROSE_DIST_DIR@/@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"; DestDir: "{app}"
+Source: "@MOROSE_DIST_DIR@/*"; DestDir: "{app}"; Flags: recursesubdirs createallsubdirs
+Source: "@MOROSE_DIST_DIR@/vc_redist.x64.exe"; DestDir: "{app}"
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [UninstallDelete]
