--- a/.github/workflows/NewVersionRelease.yml
+++ b/.github/workflows/NewVersionRelease.yml
@@ -83,6 +83,16 @@ jobs:
         asset_path: ./output/${{ matrix.app_name }}Installer-msvc-${{steps.changelog.outputs.version}}.exe
         asset_name: ${{ matrix.app_name }}Installer-msvc-${{steps.changelog.outputs.version}}.exe
         asset_content_type: application/octet-stream
+    - name: Upload To Gitee
+      uses: mengyou1024/gitee-action@v0.0.0
+      with: 
+        accessToken: ${{ secrets.GITEE_ACCESS_TOKEN }}
+        username: "mengyou1024"
+        repo: "UnionOfflineInstaller"
+        release_tag: ${{steps.changelog.outputs.version}}
+        release_name: Release ${{ github.ref }}
+        release_body: ${{ steps.changelog.outputs.changes }}
+        release_file: ./output/${{ matrix.app_name }}Installer-msvc-${{steps.changelog.outputs.version}}.exe
     # 上传压缩包
     - name: Upload Release Zip
       uses: actions/upload-release-asset@v1
