--- a/morose_config.h.in
+++ b/morose_config.h.in
@@ -1,6 +1,8 @@
 #pragma once
 
 #define APP_VERSION                    "@APP_VERSION@"
+#define APP_NAME_ZH_CN                 "@PROJECT_NAME_ZH_CN@"
+#define APP_NAME_ZH_CN_TR              QObject::tr("@PROJECT_NAME_ZH_CN@")
 
 #define ENABLE_UNION_GENERIC           (1) ///< 使用通用仪器接口
 #define ENABLE_RAILWELE_SPECIALIZATION (0) ///< 使用钢轨焊缝特化接口
