--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ target_link_libraries(
 target_link_libraries(
     UnionLib
     PUBLIC
+    Qt5::Quick
     Qt5::Core
     Qt5::SerialPort
     Qt5::Widgets
