--- a/script/pack-installer.iss.in
+++ b/script/pack-installer.iss.in
@@ -49,6 +49,7 @@ Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{
 [Files]
 Source: "@MOROSE_DIST_DIR@/@PROJECT_NAME@@CMAKE_EXECUTABLE_SUFFIX@"; DestDir: "{app}"
 Source: "@MOROSE_DIST_DIR@/*"; DestDir: "{app}"; Flags: recursesubdirs createallsubdirs
+Source: "@MOROSE_DIST_DIR@/vc_redist.x64.exe"; DestDir: "{app}"; Flags: skipifsourcedoesntexist
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [UninstallDelete]
@@ -57,7 +58,7 @@ Type: files; Name: "{app}/setting.ini"
 @MOROSE_UNINSTALL_DELETE_STRING@
 
 [UninstallRun]
-; Filename: "{app}\vc_redist.x64.exe"; Parameters: /uninstall /passive 
+Filename: "{app}\vc_redist.x64.exe"; Parameters: /uninstall /passive /norestart; Flags: skipifdoesntexist
 
 [Icons]
 Name: "{group}\{#MyAppNameZhCN}"; Filename: "{app}\{#MyAppExeName}"
@@ -67,4 +68,10 @@ Name: "{autodesktop}\{#MyAppNameZhCN}"; Filename: "{app}\{#MyAppExeName}"; Tasks
 
 [Run]
 Filename: "{app}\{#MyAppExeName}"; Description: "{cm:LaunchProgram,{#StringChange(MyAppNameZhCN, '&', '&&')}}"; Flags: nowait postinstall skipifsilent
-; Filename: "{app}\vc_redist.x64.exe"; Parameters: /passive /norestart; StatusMsg: "Installing Microsoft Visual C++ Runtime ..."
+Filename: "{app}\vc_redist.x64.exe"; Parameters: /passive /norestart; StatusMsg: "Installing Microsoft Visual C++ Runtime ..."; Flags: skipifdoesntexist
+
+[Code]
+function IsWindows8OrLower: Boolean;
+begin
+  Result := (GetWindowsVersion <= $06020000);
+end;
