build(installer): 禁用根据运行键决定是否需要重启
- 在 Inno Setup 配置文件中添加 RestartIfNeededByRun=no 设置
- 此修改确保安装程序不会根据注册表中的运行键来决定是否需要重启计算机

--- a/script/pack-installer.iss.in
+++ b/script/pack-installer.iss.in
@@ -38,6 +38,8 @@ WizardStyle=modern
 UninstallDisplayName={#MyAppNameZhCN} 卸载
 UninstallDisplayIcon={#MoroseIcon}
 ArchitecturesInstallIn64BitMode=x64
+; 禁用根据运行键决定是否需要重启
+RestartIfNeededByRun=no
 
 [Languages]
 Name: "ChineseSimplified"; MessagesFile: "@CMAKE_SOURCE_DIR@/Language/ChineseSimplified.isl"
