build: 修改安装程序名称以"Setup"为中缀
- 将安装程序名称从 "${PROJECT_NAME}Installer-${APP_VERSION}.exe" 修改为 "${PROJECT_NAME}-Setup-${APP_VERSION}.exe"
- 更新 GitHub Actions 中的构建和上传步骤以匹配新的安装程序名称
- 修改 FindMorose.cmake 和 pack-installer.iss.in 文件中的相关注释和定义

--- a/.github/workflows/NewVersionRelease.yml
+++ b/.github/workflows/NewVersionRelease.yml
@@ -53,7 +53,7 @@ jobs:
     - name: CMake Config
       run: |
         cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt5_DIR }}" -G Ninja  -DCMAKE_BUILD_TYPE=Release
-    - name: CMake Build Installer
+    - name: CMake Build Setup
       run: cmake --build build --target generate_exe_installer --config Release
     # 打包输出文件
     - name: Package 
@@ -74,14 +74,14 @@ jobs:
         draft: false
         prerelease: false
     # 上传exe安装程序
-    - name: Upload Release Installer
+    - name: Upload Release Setup
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./output/${{ matrix.app_name }}Installer-${{steps.changelog.outputs.version}}.exe
-        asset_name: ${{ matrix.app_name }}Installer-${{steps.changelog.outputs.version}}.exe
+        asset_path: ./output/${{ matrix.app_name }}-Setup-${{steps.changelog.outputs.version}}.exe
+        asset_name: ${{ matrix.app_name }}-Setup-${{steps.changelog.outputs.version}}.exe
         asset_content_type: application/octet-stream
     # 上传压缩包
     - name: Upload Release Zip
@@ -103,7 +103,7 @@ jobs:
         release_tag: ${{steps.changelog.outputs.version}}
         release_name: Release ${{steps.changelog.outputs.version}}
         release_body: ${{ steps.changelog.outputs.changes }}
-        release_file: ./output/${{ matrix.app_name }}Installer-${{steps.changelog.outputs.version}}.exe
+        release_file: ./output/${{ matrix.app_name }}-Setup-${{steps.changelog.outputs.version}}.exe
     # 提交changelog
     - name: Create Changes File
       env:
