refactor(updater): 重构升级模块中的文件下载逻辑
- 修改了 AppUpdater 和 UpgradeFromGitee 类中的文件下载方法
- 优化了下载进度的计算和回调机制
- 移除了不必要的指针操作，提高了代码的安全性和可读性
- 在 CMakeLists.txt 中添加了目标文件的引用

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ target_link_libraries(
     Qt5::SerialPort
     Qt5::Network
 )
+
 set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
 
 target_compile_options(${PROJECT_NAME} PUBLIC
@@ -139,6 +140,8 @@ if(Morose_FOUND)
         message(WARNING "no ProductConfig.json file please see ${CMAKE_SOURCE_DIR}/config/ProductConfigTemplate.json")
         set(PRODUCT_CONFIG_FILE "config/DeployConfig.json")
     endif()
+
+    target_sources(${PROJECT_NAME} PUBLIC ${PRODUCT_CONFIG_FILE} ${CMAKE_BINARY_DIR}/private_include/morose_config.h)
 
     morose_add_environment_config_file(
         TARGET ${PROJECT_NAME}
