feat: 修改软件"关于软件"界面的显示, 修改Toast的样式
- 在 AboutWnd.qml 中添加了软件版本、编译日期、编译时间和 COMMIT HASH 的显示
- 修改 CMakeLists.txt，在发布版本时更新 main.cpp 时间戳
- 在 FindMorose.cmake 中获取 Git COMMIT HASH
- 更新 Morose 配置文件，添加 COMMIT HASH 定义
- 调整 MainWnd.qml 中的界面布局和功能
- 优化 Toast 组件，增加显示时间

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,3 +156,12 @@ if(Morose_FOUND)
     morose_add_qml_dirs("resource/qml")
     morose_auto_release()
 endif(Morose_FOUND)
+
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    # Release 模式下总是更新main.cpp的时间戳, 以保证软件中的编译时间总是正确的
+    # Debug 模式下不更新是为了缩短编译时间
+    add_custom_command(
+        TARGET ${PROJECT_NAME} PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E touch_nocreate  "${CMAKE_SOURCE_DIR}/src/main.cpp"
+    )
+endif(CMAKE_BUILD_TYPE STREQUAL "Release")
