--- a/config/morose_config.h.in
+++ b/config/morose_config.h.in
@@ -1,6 +1,7 @@
 #pragma once
 
 #define APP_VERSION                    "@APP_VERSION@"
+#define APP_COMMIT_HASH                "@APP_COMMIT_HASH@"
 #define APP_NAME_ZH_CN                 "@PROJECT_NAME_ZH_CN@"
 #define APP_NAME_ZH_CN_TR              QObject::tr("@PROJECT_NAME_ZH_CN@")
 
