ci: 添加工作流编译标识
- 在 CMake 配置中添加 BUILD_BY_WORKFLOW 标识
- 在 AboutWnd.qml 中显示流水线编译信息
- 在 main.cpp 中注册 BUILD_BY_WORKFLOW 标识
- 更新 GitHub Actions 工作流以设置 BUILD_BY_WORKFLOW 标识

--- a/.github/workflows/NewVersionRelease.yml
+++ b/.github/workflows/NewVersionRelease.yml
@@ -52,7 +52,7 @@ jobs:
     # 配置、编译程序
     - name: CMake Config
       run: |
-        cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt5_DIR }}" -G Ninja  -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_PREFIX_PATH="${{ env.Qt5_DIR }}" -G Ninja  -DCMAKE_BUILD_TYPE=Release -DBUILD_BY_WORKFLOW=ON
     - name: CMake Build Setup
       run: cmake --build build --target generate_exe_installer --config Release
     # 打包输出文件
