--- a/config/morose_config.h.in
+++ b/config/morose_config.h.in
@@ -1,5 +1,5 @@
 #pragma once
-
+#define PROJECT_NAME                   "@PROJECT_NAME@"
 #define APP_VERSION                    "@APP_VERSION@"
 #define APP_COMMIT_HASH                "@APP_COMMIT_HASH@"
 #define APP_NAME_ZH_CN                 "@PROJECT_NAME_ZH_CN@"
