build(CMakeLists.txt): 优化 lrelease 和 lupdate 的依赖关系
- 仅在 Release 构建模式下添加 lrelease 和 lupdate 的依赖关系
- Debug模式下默认不会更新翻译文件, 减少分支切换时的冲突

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,10 @@ add_custom_target(
     DEPENDS "translations/${PROJECT_NAME}_en.ts"
 )
 
-add_dependencies(lrelease lupdate)
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    add_dependencies(lrelease lupdate)
+endif(CMAKE_BUILD_TYPE STREQUAL "Release")
+
 add_dependencies(${PROJECT_NAME} lrelease)
 
 find_package(Morose)
